add system settings